# jsco

./: .eslintrc.cjs  .gitignore  .swcrc  LICENSE  README.md  THIRD-PARTY-NOTICES.TXT  TODO.md  bundle-size.json  demo-verbose.mjs  demo.mjs  http-WAT-plan.md  index.html  inspiration.md  jest.config.js  jest.setup.ts  jest_output.txt  jspi.md  main.js  middleware-plan.md  node-event-loop-problem.md  p2-to-p3-adapter.md  package-lock.json  package.json  phase3-summary.txt  phase3-tail.txt  plan-1-wasmtime-corpus.md  plan-2-bundle-size.md  plan-3-npm-publish.md  plan-4-async-stress-tests.md  plan-5-boundary-validation.md  plan.md  playwright.config.ts  proposals.md  rollup.config.js  sockets-explained.md  spec-gaps.md  test-full.txt  test-migration-plan.md  test-output.txt  test-output2.txt  (+6 more)
city/: Cargo.toml  rust-toolchain.toml
city/src/: bindings.rs  lib.rs
city/wasm/: city-zoo.wasm
city/wat/: city-zoo.wat
city/wit/: city.wit
deploy/: package.json
hello/: Cargo.toml  README.md  hello-test.mjs
hello/.cargo/: config
hello/src/: bindings.rs  lib.rs
hello/ts/: index.d.ts
hello/wasi-hello/: Cargo.toml  wasi-hello-test.mjs
hello/wasm/: hello.wasm
hello/wat/: cut-hello.wat  hello.ts  hello.wat  model.ts
hello/wit/: hello.wit
integration-tests/: Cargo.toml  ReadMe.md  out.txt  wasi_snapshot_preview1.reactor.wasm
integration-tests/bad-guests-p3-wat/: bad-guests-p3.wasm  bad-guests-p3.wat
integration-tests/clock-random-poll-p1-wat/: test.wasm  test.wat
integration-tests/compositions/: double-forwarder-http-p3.wac  double-forwarder-http-p3.wasm  double-forwarder-implementer-http-p3.wac  double-forwarder-implementer-http-p3.wasm  double-forwarder-implementer-p3.wac  double-forwarder-implementer-p3.wasm  double-forwarder-implementer.wac  double-forwarder-implementer.wasm  double-forwarder-p3.wac  double-forwarder-p3.wasm  double-forwarder.wac  double-forwarder.wasm  forwarder-implementer-http-p3-server.wac  forwarder-implementer-http-p3-server.wasm  forwarder-implementer-p3.wac  forwarder-implementer-p3.wasm  forwarder-implementer.wac  forwarder-implementer.wasm  nested-double-forwarder-http-p3.wac  nested-double-forwarder-http-p3.wasm  nested-double-forwarder-p3.wac  nested-double-forwarder-p3.wasm  nested-double-forwarder.wac  nested-double-forwarder.wasm  nested-forwarder-implementer-http-p3.wac  nested-forwarder-implementer-http-p3.wasm  nested-forwarder-implementer-p3.wac  nested-forwarder-implementer-p3.wasm  nested-forwarder-implementer.wac  nested-forwarder-implementer.wasm  wrapped-forwarder-http-p3.wac  wrapped-forwarder-http-p3.wasm  wrapped-forwarder-p3.wac  wrapped-forwarder-p3.wasm  wrapped-forwarder.wac  wrapped-forwarder.wasm
integration-tests/consumer/: Cargo.toml
integration-tests/consumer-p2/: Cargo.toml
integration-tests/consumer-p3/: Cargo.toml  consumer_p3.wasm
integration-tests/dispose-async-p3-wat/: dispose-async-p3.wasm  dispose-async-p3.wat
integration-tests/echo-args-p1-wat/: echo-args.wasm  echo-args.wat
integration-tests/echo-async-p3-wat/: echo-async-p3.wasm  echo-async-p3.wat
integration-tests/echo-reactor/: Cargo.toml
integration-tests/echo-reactor-ts/: index.ts
integration-tests/echo-reactor-wat/: echo.wasm  echo.wat
integration-tests/echo-server-p3/: Cargo.toml  echo_server_p3.wasm
integration-tests/echo-stdin-p1-wat/: echo-stdin.wasm  echo-stdin.wat
integration-tests/env-p1-wat/: env.wasm  env.wat
integration-tests/file-io-p1-wat/: file-io.wasm  file-io.wat
integration-tests/forwarder/: Cargo.toml
integration-tests/forwarder-p2/: Cargo.toml
integration-tests/forwarder-p3/: Cargo.toml  forwarder_p3.wasm
integration-tests/hello-city-wat/: hello-city.wasm  hello-city.wat  hello-city.wit
integration-tests/hello-http-p3-wat/: hello-http-p3.wasm  hello-http-p3.wat
integration-tests/hello-p1-world-wat/: hello.wasm  hello.wat
integration-tests/hello-p2-world/: Cargo.toml
integration-tests/hello-p2-world-wat/: hello.wat
integration-tests/hello-p3-world/: Cargo.toml  hello_p3_world.wasm
integration-tests/hello-p3-world-wat/: hello-p3.wasm  hello-p3.wat
integration-tests/hello-world/: Cargo.toml
integration-tests/hello-world-wat/: hello.wasm  hello.wat
integration-tests/http-p3-wat/: client-consumer-p3.wasm  client-consumer-p3.wat  server-fwd-p3.wasm  server-fwd-p3.wat  server-impl-p3.wasm  server-impl-p3.wat
integration-tests/implementer/: Cargo.toml
integration-tests/implementer-p2/: Cargo.toml
integration-tests/implementer-p3/: Cargo.toml  implementer_p3.wasm
integration-tests/join-http-p3/: Cargo.toml  README.md  join_http_p3.wasm
integration-tests/jspi-deadlock-repro/: Cargo.toml  jspi_deadlock_repro.wasm
integration-tests/multi-async-p3-wat/: multi-async-p3.wasm  multi-async-p3.wat
integration-tests/own-roundtrip-p3-wat/: inner.wasm  inner.wat  outer.wasm  outer.wat
integration-tests/trap-import-wat/: trap-import.wasm  trap-import.wat
integration-tests/trap-sync-wat/: trap-sync.wasm  trap-sync.wat
integration-tests/wasmtime/: README.md  p2_api_reactor.component.wasm  p2_api_read_only.component.wasm  p2_api_time.component.wasm  p2_cli_args.component.wasm  p2_cli_argv0.component.wasm  p2_cli_default_clocks.component.wasm  p2_cli_directory_list.component.wasm  p2_cli_env.component.wasm  p2_cli_exit_default.component.wasm  p2_cli_exit_failure.component.wasm  p2_cli_exit_panic.component.wasm  p2_cli_exit_success.component.wasm  p2_cli_export_cabi_realloc.component.wasm  p2_cli_file_append.component.wasm  p2_cli_file_dir_sync.component.wasm  (+8 more)
(+761 files in other folders)
