[package]
name = "hello"
version = "0.1.0"
edition = "2021"
authors = ["pavel.savara@gmail.com"]

[dependencies]
cargo-component-bindings = { git = "https://github.com/bytecodealliance/cargo-component?rev=e57d1d14#e57d1d1405ed2d76f1f3d8647480dea700379ff8#36c221e4", version = "0.1.0" }
wee_alloc = { version = "0.4.5" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hello:city"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]

[profile.release]
lto = true
opt-level = 's'

[build]
incremental = true
