[package]
name = "hello"
version = "0.1.0"
edition = "2021"
authors = ["pavel.savara@gmail.com"]

[dependencies]
wit-bindgen-rt = { version = "0.24.0" }
wee_alloc = { version = "0.4.5" }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "hello:city"

[package.metadata.component.target]
path = "wit"

[package.metadata.component.dependencies]

[profile.release]
lto = true
opt-level = 's'

