[package]
name = "consumer"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["bitflags"] }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "jsco:consumer"
target.world = "consumer"
target.path = "wit"

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "../../wit/wasip2/cli" }
"wasi:io" = { path = "../../wit/wasip2/cli/deps/io.wit" }
"wasi:clocks" = { path = "../../wit/wasip2/cli/deps/clocks.wit" }
"wasi:random" = { path = "../../wit/wasip2/cli/deps/random.wit" }
"wasi:filesystem" = { path = "../../wit/wasip2/cli/deps/filesystem.wit" }
"wasi:sockets" = { path = "../../wit/wasip2/cli/deps/sockets.wit" }
"jsco:test" = { path = "../../wit" }
