[package]
name = "hello-p2-world"
version = "0.1.0"
edition = "2021"

[dependencies]
wit-bindgen-rt = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "jsco:hello-p2-world"
target.path = "wit/world.wit"
target.world = "hello-p2-world"

[package.metadata.component.target.dependencies]
"wasi:cli" = { path = "../../wit/wasip2/cli" }
"wasi:io" = { path = "../../wit/wasip2/cli/deps/io.wit" }
"wasi:clocks" = { path = "../../wit/wasip2/cli/deps/clocks.wit" }
"wasi:random" = { path = "../../wit/wasip2/cli/deps/random.wit" }
"wasi:filesystem" = { path = "../../wit/wasip2/cli/deps/filesystem.wit" }
"wasi:sockets" = { path = "../../wit/wasip2/cli/deps/sockets.wit" }
